# task-card-cards/src/controllers/delete_card.go
@@ -6,6 +6,7 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/luuisavelino/task-card-cards/src/configuration/logger"
+	_ "github.com/luuisavelino/task-card-cards/src/configuration/rest_err"
 	"github.com/luuisavelino/task-card-cards/src/configuration/rest_success"
 	"github.com/luuisavelino/task-card-cards/src/configuration/validation"
 	"github.com/luuisavelino/task-card-cards/src/controllers/model/request"
@@ -22,9 +23,10 @@ import (
 // @Accept  json
 // @Produce  json
 // @Param id path int true "Card id"
-// @Param user_id formData string true "User id of the card"
-// @Success 200 {object} globals.BaseRequestReturn
-// @Failure 400 {object} globals.BaseRequestReturn
+// @Param action body request.ActionRequest true "Action info"
+// @Success 200 {object} rest_success.BaseRequestReturn
+// @Failure 400 {object} rest_err.RestErr
+// @Failure 500 {object} rest_err.RestErr
 // @Router /cards/{id} [delete]
 func (cc *cardControllerInterface) DeleteCard(c *gin.Context) {
 	logger.Info("Init DeleteCard controller",
